@@ -375,7 +375,8 @@ ESTIMATION <- function(data, model, group, itemtype = NULL, guess = 0, upper = 1
                    method=method,
                    SElogLik=SElogLik, 
                    AIC=AIC, 
-                   BIC=BIC, 
+                   BIC=BIC,
+                   nfact=nfact,
                    G2=G2,
                    RMSEA=RMSEA,
                    TLI=TLI,
