@@ -6,15 +6,16 @@
 }
 \arguments{
   \item{object}{a computed model object of class
-  \code{ExploratoryClass} or \code{ConfirmatoryClass}}
+  \code{ExploratoryClass}, \code{ConfirmatoryClass}, or
+  \code{MultipleGroupClass}}
 
   \item{item}{a single numeric value indicating which item
   to plot}
 
   \item{type}{plot type to use, information
-  (\code{'info'}), information contours
-  \code{('infocontour')}, or item trace lines
-  (\code{'trace'})}
+  (\code{'info'}), or item trace lines (\code{'trace'}), or
+  information contours \code{('infocontour')} (not for
+  \code{MultipleGroupClass} objects)}
 
   \item{degrees}{the degrees argument to be used if there
   are exactly two factors. See \code{\link{iteminfo}} for
